--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    background-color: aqua;
+}
+
+
+
+/*
 <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
