--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+* {
+    box-sizing: border-box;
+}
 body {
-    background-color: aqua;
+    font-family: 'Poppins', sans-serif;
+    background-color: gray;
+}
+
+header {
+    max-width: 500px;
+    text-align: center;
+    margin: 0 auto;
 }
 
 
