adding more code

--- a/style.css
+++ b/style.css
@@ -5,15 +5,27 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: gray;
+    
 }
 
 header {
     max-width: 500px;
     text-align: center;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
+h1 {
+    font-weight: 200;
+    margin: 0;
+}
+
+h1.strong {
+    font-weight: 600;
+}
+
+p {
+    color: hsl(229, 6%, 66%);
+}
 
 
 /*
