--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: hsl(0, 0%, 98%)
     
 }
 
@@ -27,6 +28,26 @@ p {
     color: hsl(229, 6%, 66%);
 }
 
+footer {
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    max-width: 1140px;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.box {
+    background-color: white;
+    padding: 30px;
+    margin: 10px;
+    width: 350px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 5px;
+}
 
 /*
 <style>
