--- a/style.css
+++ b/style.css
@@ -43,12 +43,25 @@ footer {
 .box {
     background-color: white;
     padding: 30px;
-    margin: 10px;
+    margin: 15px;
     width: 350px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
 
+.box h3 {
+    margin: 0;
+}
+
+.box img {
+    display: block;
+    margin-left: auto;
+}
+
+.box p {
+    font-size: 14px;
+    margin: 15px 0 30px;
+}
 /*
 <style>
     .attribution { font-size: 11px; text-align: center; }
